@@ -3,16 +3,16 @@
 
 FWB_MAJOR_VERSION=3
 FWB_MINOR_VERSION=0
-FWB_MICRO_VERSION=6
-VERSION="3.0.6"
-SHORTVERSION="306"
+FWB_MICRO_VERSION=7
+VERSION="3.0.7"
+SHORTVERSION="307"
 
 # RELEASE="1"
 RELEASE="b@BUILD_NUM@"
 
 BETA="no"
 
-REQUIRED_LIBFWBUILDER_VERSION="3.0.6"
+REQUIRED_LIBFWBUILDER_VERSION="3.0.7"
 
 # current (or major) version number of the library so file
 #
