@@ -1,5 +1,5 @@
 <?xml version="1.0"?> <!-- -*- mode: xml; -*- -->
-<FWBuilderResources version="3.0.6">
+<FWBuilderResources version="3.0.7">
     <Target name="freebsd">
       <description>FreeBSD</description>
       <family>freebsd</family>
